# Complex-Lib

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  complex.hpp  main.cpp
.github/workflows/: cmake.yml  codeql-analysis.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  Complex.cpp  Complex.h  Complex.hpp
test/: CMakeLists.txt  ComplexTest.cpp  ComplexTestCustom.cpp
